# Review-IIIT

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  down.sh  package-lock.json  package.json  run.sh  stop.sh
.github/workflows/: formatting.yml  linter.yml
backend/: .dockerignore  .gitignore  Dockerfile  config.py  main.py  models.py  pyproject.toml  requirements.txt  utils.py
backend/config/: database.py
backend/models/: courses.py  reviews.py  users.py
backend/routes/: auth.py  cas.py  courses.py  members.py  reviews.py  routes_helpers.py  users.py
backend/utils/: errors.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  react-app-env.d.ts  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.jsx  App.tsx  api.jsx  api.tsx  constants.tsx  sortutils.tsx  theme.jsx  theme.tsx  types.tsx
frontend/src/components/: ErrorDialog.jsx  ErrorDialog.tsx  Footer.jsx  Footer.tsx  FullPageLoader.jsx  FullPageLoader.tsx  Login.jsx  Login.tsx  Navbar.jsx  Navbar.tsx  Review.jsx  Review.tsx  ReviewBox.jsx  ReviewBox.tsx  ReviewInput.jsx  ReviewInput.tsx  ReviewList.jsx  SortBox.tsx  UpvoteDownvote.jsx  UpvoteDownvote.tsx
frontend/src/pages/: AddReview.jsx  CourseList.jsx  Courses.jsx  Courses.tsx  Credits.jsx  Credits.tsx  Home.jsx  Home.tsx  Profs.jsx  Profs.tsx
src/: App.jsx  courses.json
src/components/: Navbar.jsx
src/pages/: AddReview.jsx  CourseDetails.jsx  CourseList.jsx  Home.jsx  UserProfile.jsx
