[project]
name = "reviewiiith-backend"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]",
    "pyjwt",
    "cryptography",
    "motor",
    "python-cas",
    "httpx"
]

[tool.uv]
dev-dependencies = [
    "ruff"
]

[tool.ruff]

target-version = "py312"

[tool.ruff.lint]

# select all, then ignore unneeded ones
select = ["ALL"]
ignore = [
    "D",       # docs
    "ANN201",  # missing return type
    "ANN204",  # missing return type
    "FBT001",  # boolean default argument
    "FBT002",  # boolean default argument
    "INP001",  # implicit namespace package
    "EM101",   # exception string literal
    "TRY003",  # long messages outside exception class
    "TRY301",  # abstract raise to inner function
    "BLE001",  # catch blind exception
    "UP040",   # type keyword
    "TD",      # TODO
    "FIX002",  # FIXME
    "N805",    # first argument must be named self
]
